force-app/main/default/objects/Claim__c/Claim__c.object-meta.xml
<CustomObject>
    <label>Claim</label>
    <pluralLabel>Claims</pluralLabel>
    <nameField>
        <label>Claim Number</label>
        <displayFormat>CLM-{0000}</displayFormat>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Distributor claims for schemes, damages, expiry, rate differences and other adjustments in SFA distribution management</description>
</CustomObject>