force-app/main/default/objects/Claim__c/fields/Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Approved_By__c</fullName>
    <label>Approved By</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Approved Claims</relationshipLabel>
    <relationshipName>Approved_Claims</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>