force-app/main/default/objects/Claim__c/fields/Claim_Type__c.field-meta.xml
<CustomField>
    <fullName>Claim_Type__c</fullName>
    <label>Claim Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scheme Claim</fullName>
            </value>
            <value>
                <fullName>Damage Claim</fullName>
            </value>
            <value>
                <fullName>Expiry Claim</fullName>
            </value>
            <value>
                <fullName>Rate Difference</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>