force-app/main/default/objects/Claim__c/fields/Reference_Period_From__c.field-meta.xml
<CustomField>
    <fullName>Reference_Period_From__c</fullName>
    <label>Reference Period From</label>
    <type>Date</type>
</CustomField>