force-app/main/default/objects/Claim__c/fields/Reference_Period_To__c.field-meta.xml
<CustomField>
    <fullName>Reference_Period_To__c</fullName>
    <label>Reference Period To</label>
    <type>Date</type>
</CustomField>