force-app/main/default/objects/Claim__c/fields/Supporting_Doc_URL__c.field-meta.xml
<CustomField>
    <fullName>Supporting_Doc_URL__c</fullName>
    <label>Supporting Doc URL</label>
    <type>Url</type>
</CustomField>